relm4-macros/tests/compile-fail/component-empty.rs
use relm4::SimpleComponent;

struct TestComponent;

#[relm4_macros::component]
impl SimpleComponent for TestComponent {

}

fn main() {}
